# ax

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.agent/workflows/: release.md
.cursor/: mcp.json
.cursor/rules/: fullstack-next-identity.mdc  fullstack-next-nextjs-patterns.mdc
.github/workflows/: release.yml
landing/: package-lock.json  package.json
landing/app/: globals.css  layout.tsx  page.tsx
scripts/: release.sh
src/: lib.rs  main.rs
src/cli/: mod.rs
src/cli/commands/: init.rs  install.rs  list.rs  mod.rs
src/core/: agent.rs  config.rs  mod.rs  registry.rs
src/installers/: claude.rs  codex.rs  cursor.rs  mod.rs
src/utils/: mod.rs  paths.rs  ui.rs  validation.rs
